# tenable-headshot

./: .gitignore  LICENCE  README.md  config.example.json  pyproject.toml  requirements.txt
tenable_headshot/: __init__.py  __main__.py  cli.py
tenable_headshot/core/: __init__.py  config.py  manager.py  runner.py
